# learn_graphrags_agent

./: .env.example  .gitignore  1_prepare_data_v1.py  1_prepare_data_v2.py  1_prepare_data_v3.py  2_ingest_data.py  2_ingest_data_v2.py  3_graphrag_agent.py  3_graphrag_agent_v1.py  3_graphrag_agent_v2.py  3_graphrag_agent_v3.py  README.md  check_indexes.py  config.py  pyproject.toml  requirements.txt
.agent/rules/: rule-lock-fullstack.md
dockers/: .env  Dockerfile.fullstack  Dockerfile.ollama  docker-compose.yml  mcp_config.json
output/: knowledge_graph_v1.json  knowledge_graph_v2.json  knowledge_graph_v3.json  raw_data_v3.json  statistics_v3.json  지식그래프_최종.json
